--- a/core/templates/prestamos/prestamos_pagados.html
+++ b/core/templates/prestamos/prestamos_pagados.html
@@ -3,47 +3,49 @@
 {% block content %}
 
 <div class="container">
-    <div class="table-container">
-        <h2>Préstamos Pagados</h2>
-        <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
-            <div>
-                <a href="{% url 'prestamo_crear'%}" class="btn btn-primary">Registrar un prestamo</a>
+    <div class="card-general">
+        <div class="table-container">
+            <h2>Préstamos Pagados</h2>
+            <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
+                <div>
+                    <a href="{% url 'prestamo_crear'%}" class="btn btn-primary">Registrar un prestamo</a>
+                </div>
+            <input type="text" id="searchInputSinPagar" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
             </div>
-        <input type="text" id="searchInputSinPagar" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th class="th sort-both">Detalles</th>
+                        <th class="th sort-both">Cliente</th>
+                        <th class="th sort-both">Fecha de Préstamo</th>
+                        <th class="th sort-both">Fecha de Pago</th>
+                        <th class="th sort-both">Monto de Préstamo</th>
+                        <th class="th sort-both">Monto Pago</th>
+                        <th class="th sort-both">Monto a Pagar</th>
+                        <th class="th sort-both">Tasa de Interés</th>
+                    </tr>
+                </thead>
+                <tbody id="sinpagarTableBody">
+                    {% for prestamo in prestamos_pagados %}
+                    <tr>
+                        <td><a href="{% url 'prestamo_detalles' prestamo.id %}"> {{ prestamo.id }}</a></td>
+                        <td>{{ prestamo.cliente.nombre }} {{ prestamo.cliente.apellido }}</td>
+                        <td>{{ prestamo.fecha_prestamo }}</td>
+                        <td>{{ prestamo.fecha_pago }}</td>
+                        <td>${{ prestamo.monto_prestamo }}</td>
+                        <td>{{ prestamo.monto_pago }}</td>
+                        <td>{{ prestamo.monto_a_pagar }}</td>
+                        <td>{{ prestamo.tasa_interes }}%</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="8" class="text-center">No hay préstamos pagados.</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <div class="paginacion" id="sinpagar-paginacion"></div>
         </div>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th class="th sort-both">Detalles</th>
-                    <th class="th sort-both">Cliente</th>
-                    <th class="th sort-both">Fecha de Préstamo</th>
-                    <th class="th sort-both">Fecha de Pago</th>
-                    <th class="th sort-both">Monto de Préstamo</th>
-                    <th class="th sort-both">Monto Pago</th>
-                    <th class="th sort-both">Monto a Pagar</th>
-                    <th class="th sort-both">Tasa de Interés</th>
-                </tr>
-            </thead>
-            <tbody id="sinpagarTableBody">
-                {% for prestamo in prestamos_pagados %}
-                <tr>
-                    <td><a href="{% url 'prestamo_detalles' prestamo.id %}"> {{ prestamo.id }}</a></td>
-                    <td>{{ prestamo.cliente.nombre }} {{ prestamo.cliente.apellido }}</td>
-                    <td>{{ prestamo.fecha_prestamo }}</td>
-                    <td>{{ prestamo.fecha_pago }}</td>
-                    <td>${{ prestamo.monto_prestamo }}</td>
-                    <td>{{ prestamo.monto_pago }}</td>
-                    <td>{{ prestamo.monto_a_pagar }}</td>
-                    <td>{{ prestamo.tasa_interes }}%</td>
-                </tr>
-                {% empty %}
-                <tr>
-                    <td colspan="8" class="text-center">No hay préstamos pagados.</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="paginacion" id="sinpagar-paginacion"></div>
     </div>
 </div>
 <script>
