--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -42,6 +42,12 @@
                         <li><a href="{% url 'pago_crear' %}">Registrar Pago</a></li>
                     </ul>
                 </li>
+                <li><a href="#">Tasa del dia</a>
+                    <ul class="submenu">
+                        <li><a href="#">Historico de Tasas</a></li>
+                        <li><a href="#">Registrar Tasa del Dia</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="logout-container">
                 <li>
