--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -44,7 +44,7 @@
                 </li>
                 <li><a href="#">Tasa del dia</a>
                     <ul class="submenu">
-                        <li><a href="#">Historico de Tasas</a></li>
+                        <li><a href="{% url 'tasas' %}">Historico de Tasas</a></li>
                         <li><a href="#">Registrar Tasa del Dia</a></li>
                     </ul>
                 </li>
