--- a/core/templates/pagos/pagos.html
+++ b/core/templates/pagos/pagos.html
@@ -7,7 +7,7 @@
             <h2>Ultimos pagos</h2>
             <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
                 <div></div>
-            <input type="text" id="searchInputPagos" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
+            <input type="text" id="searchInputPagos" placeholder="Buscar..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
             </div>
             <table class="table table-bordered">
                 <thead>
