--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -45,7 +45,7 @@
                 <li><a href="#">Tasa del dia</a>
                     <ul class="submenu">
                         <li><a href="{% url 'tasas' %}">Historico de Tasas</a></li>
-                        <li><a href="#">Registrar Tasa del Dia</a></li>
+                        <li><a href="{% url 'tasa_crear' %}">Registrar Tasa del Dia</a></li>
                     </ul>
                 </li>
             </ul>
