--- a/core/templates/prestamos/prestamos.html
+++ b/core/templates/prestamos/prestamos.html
@@ -24,7 +24,7 @@
                 <tbody id="sinpagarTableBody">
                     {% for prestamo in prestamos_sin_pagar %}
                     <tr>
-                        <td>{{ prestamo.id }}</td>
+                        <td><a href="{% url 'prestamo_detalles' prestamo.id %}">{{ prestamo.id }}</a></td>
                         <td>{{ prestamo.cliente.nombre }} {{ prestamo.cliente.apellido }}</td>
                         <td>{{ prestamo.fecha_prestamo }}</td>
                         <td>{{ prestamo.fecha_pago }}</td>
